# Flask-CBT

./: .gitignore  DOJO.HTML  README.md  agric_science_jss_3.json  basic_science_primary_5.json  basic_studies_jss_1.json  business_studies_jss_3.json  computer_jss_3.json  computer_jss_3o.json  computer_primary_5.json  computer_primary_jss1.json  english_language_jss_1.json  english_language_jss_3.json  english_language_primary_5.json  image_resize.py  irk_jss_3.json  main_quiz.py  mathematics.py  mathematics_jss_1.json  mathematics_jss_3.json  mathematics_primary_5.json  mediaquery.css  models.py  my_school.py  package-lock.json  package.json  pyproject.toml  pytest.py  quest.json  quiz_logic.py  reading_word.py  simpleFlask.py  social_studies_jss_1.json  social_studies_primary_5.json
School keep/: civic_education_jss_1_exam.json  civic_education_jss_2_exam.json  civic_education_jss_3_exam.json  english_language_primary_5_exam.json  mathematics_primary_4_exam.json
app/: __init__.py
collection/: main_quiz.py  my_school.py  quiz_logic.py
static/: Permissions.css  adminPage.css  adminPage2.css  countdownTimer.js  customAlert.css  examsSettings.css  imageUpload.css  loginForm.css  loginForm2.css  makingQuery.css  oldregistrationForm.css  quizPage.css  quiz_control.js  registrationForm.css  report-card-gate.css  report-card.css  report.css  role.css  teacher.css  teachers-page.css  try.js
templates/: Permissions.html  adminPage.html  adminPage2.html  base.html  basec.html  countdown.html  customAlert.html  examsSettings.html  imageUpload.html  input-scores.html  (+22 more)
(+6 files in other folders)
